--- a/src/main/resources/templates/registro.html
+++ b/src/main/resources/templates/registro.html
@@ -66,12 +66,12 @@
             <form th:action="@{/register}" method="post">
               <div class="row">
                 <div class="col-md-6 mb-3">
-                  <label for="firstName" class="form-label">Nombre</label>
-                  <input type="text" class="form-control" id="firstName" name="firstName" required>
+                  <label for="nombre" class="form-label">Nombre</label>
+                  <input type="text" class="form-control" id="nombre" name="nombre" required>
                 </div>
                 <div class="col-md-6 mb-3">
-                  <label for="lastName" class="form-label">Apellido</label>
-                  <input type="text" class="form-control" id="lastName" name="lastName" required>
+                  <label for="apellido" class="form-label">Apellido</label>
+                  <input type="text" class="form-control" id="apellido" name="apellido" required>
                 </div>
               </div>
               <div class="mb-3">
@@ -81,6 +81,10 @@
               <div class="mb-3">
                 <label for="email" class="form-label">Correo Electrónico</label>
                 <input type="email" class="form-control" id="email" name="email" required>
+              </div>
+              <div class="mb-3">
+                <label for="telefono" class="form-label">Teléfono</label>
+                <input type="tel" class="form-control" id="telefono" name="telefono" pattern="[0-9]{9}" required>
               </div>
               <div class="mb-3">
                 <label for="password" class="form-label">Contraseña</label>
