--- a/src/main/resources/templates/admin/layout.html
+++ b/src/main/resources/templates/admin/layout.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org" lang="es" th:fragment="*">
+< xmlns:th="http://www.thymeleaf.org" lang="es" th:fragment="*">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -19,7 +19,7 @@
         }
     </style>
 </head>
-<body class="d-flex flex-column flex-md-row">
+< class="d-flex flex-column flex-md-row">
 
     <!-- Sidebar fijo en desktop -->
     <div class="d-none d-md-flex flex-column sidebar bg-primary text-white">
@@ -45,6 +45,8 @@
     <div id="content" class="p-4 flex-grow-1">
         <div th:replace="~{::section}"></div>
     </div>
+        <!-- Footer -->
+    <div th:replace="fragments/footer :: footer"></div>
 
     <!-- Bootstrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
